--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #1C2027;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: Optima;
+  src: url(./fonts/OPTIMA.woff);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: Optima-B;
+  src: url(./fonts/OPTIMA_B.woff);
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: SlateBold;
+  src: url(./fonts/SlateBold.TTF);
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+  font-family: Slate;
+  src: url(./fonts/SlateReg.TTF);
+}
+@font-face {
+  font-family: SlateBoldCn;
+  src: url(./fonts/SlateBoldCn.TTF);
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: SlateBook;
+  src: url(./fonts/SlateBook.TTF);
 }
