--- a/src/Styles/Clonecard.css
+++ b/src/Styles/Clonecard.css
@@ -20,8 +20,8 @@
 }
 
 .clone-card:hover {
-  -webkit-transform: translate(0, -10px);
-          transform: translate(0, -10px);
+  -webkit-transform: scale(1.05, 1.05);
+          transform: scale(1.05, 1.05);
 }
 
 .clone-card .card-name {
