--- a/src/Styles/Reactcard.css
+++ b/src/Styles/Reactcard.css
@@ -18,8 +18,8 @@
 }
 
 .react-card:hover {
-  -webkit-transform: translate(0, -10px);
-          transform: translate(0, -10px);
+  -webkit-transform: scale(1.05, 1.05);
+          transform: scale(1.05, 1.05);
 }
 
 .react-card .card-name {
