--- a/src/Components/React_Projects/Shopping-List/ShopList.css
+++ b/src/Components/React_Projects/Shopping-List/ShopList.css
@@ -2,7 +2,21 @@
     background-color: white;
     width: 100%;
     height: 100vh;
-    padding-top: 5em;
+    padding-top: 2em;
+}
+
+.shoplist-info {
+    width: 75em;
+    height: 1.5em;
+    background-color: rgb(254, 244, 193);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(174, 147, 14);
+    font-size: 1.2rem;
+    margin: auto;
+    border: 1px solid rgb(250, 227, 112);
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 4em;
 }
 
 .List-card {
