--- a/src/Styles/Projectspage.scss
+++ b/src/Styles/Projectspage.scss
@@ -9,22 +9,17 @@ $accent-green: #28b097;
   .heading {
 
     font-family: SlateBold;
-    color: white;
+    // color: white;
+    color: black;
     font-size: 1.5rem;
     user-select: none;
-    margin: 200px 0 150px 0;
+    margin: 100px 0 100px 0;
 
     p:nth-of-type(1) {
       
     font-size: 2.5rem;
     font-weight: 600;
     text-decoration: underline $accent-green;
-
-    }
-
-    p:nth-of-type(2), i {
-
-      margin-top: 20px;
 
     }
 
@@ -90,7 +85,7 @@ $accent-green: #28b097;
 
     .heading {
 
-      margin: 150px 0 100px 0;
+      margin: 80px 0 100px 0;
 
       p:nth-of-type(1) {
       
@@ -100,7 +95,6 @@ $accent-green: #28b097;
 
       p:nth-of-type(2), i {
 
-        margin-top: 5px;
   
       }
 
