--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -15,7 +15,7 @@
     align-items: center;
     font-family: 'Open sans';
     font-size: 2.5rem;
-    color: white;
+    color: black;
     margin-right: auto;
 
 }
@@ -28,7 +28,7 @@
 
 .contactdiv a {
 
-    color: white;
+    color: black;
     text-decoration: none;
 
 }
@@ -43,6 +43,7 @@
 
     margin-right: 50px;
     font-size: 5rem;
+    color: #28b097;
     
 }
 
