--- a/src/Styles/Homepage.css
+++ b/src/Styles/Homepage.css
@@ -24,7 +24,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   line-height: 1.6;
-  color: #e2e1e1;
+  color: black;
 }
 
 .homepage .section-one .about {
@@ -70,7 +70,7 @@
 }
 
 .homepage .section-two .aboutme {
-  background-color: #e2e1e1;
+  background-color: #f4f4f4;
   border: 1px solid transparent;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
@@ -103,11 +103,11 @@
   -webkit-text-decoration: underline #28b097;
           text-decoration: underline #28b097;
   font-family: SlateBold;
-  color: white;
+  color: black;
 }
 
 .homepage .section-two .personal-info .personal-info-section {
-  background-color: #e2e1e1;
+  background-color: #f4f4f4;
   padding: 50px;
   font-family: 'DM sans';
   border-radius: 10px;
