--- a/src/Styles/Projectspage.css
+++ b/src/Styles/Projectspage.css
@@ -5,13 +5,13 @@
 
 .projects-page .heading {
   font-family: SlateBold;
-  color: white;
+  color: black;
   font-size: 1.5rem;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  margin: 200px 0 150px 0;
+  margin: 100px 0 100px 0;
 }
 
 .projects-page .heading p:nth-of-type(1) {
@@ -19,10 +19,6 @@
   font-weight: 600;
   -webkit-text-decoration: underline #28b097;
           text-decoration: underline #28b097;
-}
-
-.projects-page .heading p:nth-of-type(2), .projects-page .heading i {
-  margin-top: 20px;
 }
 
 .projects-page .projects {
@@ -61,13 +57,10 @@
 
 @media screen and (max-width: 600px) {
   .projects-page .heading {
-    margin: 150px 0 100px 0;
+    margin: 80px 0 100px 0;
   }
   .projects-page .heading p:nth-of-type(1) {
     font-size: 1.5rem;
-  }
-  .projects-page .heading p:nth-of-type(2), .projects-page .heading i {
-    margin-top: 5px;
   }
   .projects-page .projects {
     display: -ms-grid;
