--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,69 +1,99 @@
 .contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5% 30%;
-  gap: 8em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10% 30%;
+    gap: 8em;
+
 }
 
 .contactdiv {
-  display: flex;
-  align-items: center;
-  font-family: "Open sans";
-  font-size: 2.1rem;
-  color: black;
-  margin-right: auto;
+
+    display: flex;
+    align-items: center;
+    font-family: 'Open sans';
+    font-size: 2.5rem;
+    letter-spacing: 4px;
+    color: black;
+    margin-right: auto;
+
 }
 
-.contactdiv p,
+.contactdiv p, .contactdiv a {
+
+    transition: all 0.3s linear;
+
+}
+
 .contactdiv a {
-  transition: all 0.3s linear;
+
+    color: black;
+    text-decoration: none;
+
 }
 
-.contactdiv a {
-  color: black;
-  text-decoration: none;
-}
+.contactdiv p:hover, .contactdiv a:hover {
 
-.contactdiv p:hover,
-.contactdiv a:hover {
-  color: #28b097;
+    color: #28b097;
+
 }
 
 .icons {
-  margin-right: 50px;
-  font-size: 5rem;
-  color: #28b097;
+
+    margin-right: 50px;
+    font-size: 5rem;
+    color: #28b097;
+    
 }
 
+
 @media all and (min-width: 600px) and (max-width: 768px) {
-  .contact {
-    padding: 30%;
-    gap: 5em;
-  }
+    
+    .contact {
 
-  .contactdiv {
-    font-size: 1.4rem;
-  }
+        padding: 30%;
+        gap: 5em;
 
-  .icons {
-    font-size: 4rem;
-  }
+    }
+    
+    .contactdiv {
+
+        font-size: 1.4rem;
+
+    }
+
+    .icons {
+
+        font-size: 4rem;
+
+    }
+
+
 }
 
 @media all and (max-width: 600px) {
-  .contact {
-    padding: 30% 10%;
-    gap: 2.5em;
-  }
 
-  .contactdiv {
-    font-size: 1.2rem;
-  }
+    .contact {
 
-  .icons {
-    margin-right: 20px;
-    font-size: 2.8rem;
-  }
+        padding: 30% 10%;
+        gap: 2.5em;
+
+    }
+    
+    .contactdiv {
+
+        font-size: 1rem;
+        letter-spacing: 1.8px;
+
+    }
+
+    .icons {
+
+        margin-right: 20px;
+        font-size: 2.8rem;
+
+    }
+
 }
