--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -27,6 +27,7 @@
   padding: 4vh 2vw;
   text-decoration: none;
   color: black;
+  letter-spacing: 4px;
   background-color: #28b097;
   border-right: 1px solid black;
 }
@@ -66,17 +67,19 @@
 @media screen and (max-width: 600px) {
   .navbar {
     margin: auto;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
   }
   .navbar .nav-link {
-    padding: 2em 1em;
-    font-size: 1.1rem;
+    padding: 2em 2vw;
+    font-size: 0.9rem;
+    letter-spacing: 4px;
+    text-align: center;
     border-right: 1px solid transparent;
+    -webkit-box-flex: 33%;
+        -ms-flex: 33%;
+            flex: 33%;
   }
   .navbar .nav-link:hover {
-    padding: 2em 1em;
+    padding: 2em 2vw;
   }
   .navbar .house-icon {
     font-size: 0.9rem;
