--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,6 +1,6 @@
 .contact {
 
-    width: 40%;
+    max-width: 35%;
     margin: auto;
     padding: 5em 0;
 
@@ -50,7 +50,7 @@
     
     .contact {
 
-        width: 60%;
+        max-width: 60%;
         margin: auto;
         padding: 5em 2em;
 
@@ -76,7 +76,7 @@
 
     .contact {
 
-        width: 90%;
+        max-width: 90%;
         margin: auto;
         padding: 5em 2em;
 
