--- a/src/Styles/Homepage.css
+++ b/src/Styles/Homepage.css
@@ -47,6 +47,10 @@
   float: left;
 }
 
+.homepage .section-one .about .hello, .homepage .section-one .about .intro {
+  letter-spacing: 1.5px;
+}
+
 .homepage .section-one .extra {
   margin-top: 10px;
   min-width: 700px;
@@ -56,6 +60,7 @@
 .homepage .section-one .extra p {
   font-size: 1.8rem;
   font-family: Slate;
+  letter-spacing: 2px;
 }
 
 .homepage .section-two {
@@ -73,8 +78,8 @@
   background-color: #f4f4f4;
   border: 1px solid transparent;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
+          box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
   padding: 40px 100px;
   line-height: 1.6;
   text-align: justify;
@@ -111,8 +116,8 @@
   padding: 50px;
   font-family: 'DM sans';
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
+          box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
 }
 
 .homepage .section-two .personal-info .personal-info-section .info-item {
@@ -134,17 +139,17 @@
 }
 
 .homepage .section-two .personal-info .personal-info-section .info-item p:nth-of-type(1) {
-  -webkit-box-flex: 30%;
-      -ms-flex: 30%;
-          flex: 30%;
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
 }
 
 .homepage .section-two .personal-info .personal-info-section .info-item p:nth-of-type(2), .homepage .section-two .personal-info .personal-info-section .info-item ul {
   color: #4d4d4d;
   max-width: 400px;
-  -webkit-box-flex: 10%;
-      -ms-flex: 10%;
-          flex: 10%;
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
 }
 
 .homepage .section-two .personal-info .personal-info-section .info-item p:nth-of-type(2) {
@@ -243,9 +248,11 @@
   }
   .homepage .section-one .about .hello {
     font-size: 4rem;
+    letter-spacing: 6px;
   }
   .homepage .section-one .about .intro {
     width: 350px;
+    letter-spacing: 1px;
   }
   .homepage .section-one .about .sideline {
     height: 0px;
@@ -262,6 +269,7 @@
   .homepage .section-one .about .extra p {
     max-width: 350px;
     font-size: 1.1rem;
+    letter-spacing: 1px;
   }
   .homepage .section-two {
     margin: 20px;
