--- a/src/Styles/Homepage.scss
+++ b/src/Styles/Homepage.scss
@@ -40,6 +40,13 @@ $ashen: rgb(226, 225, 225);
         margin-right: 40px;
         float: left;
         
+        
+      }
+      
+      .hello, .intro {
+
+        letter-spacing: 1.5px;
+
       }
 
     }
@@ -55,6 +62,7 @@ $ashen: rgb(226, 225, 225);
 
         font-size: 1.8rem;
         font-family: Slate;
+        letter-spacing: 2px;
 
       }
 
@@ -80,7 +88,7 @@ $ashen: rgb(226, 225, 225);
       background-color: rgb(244, 244, 244);
       border: 1px solid transparent;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
       padding: 40px 100px;
       line-height: 1.6;
       text-align: justify;
@@ -125,7 +133,7 @@ $ashen: rgb(226, 225, 225);
       padding: 50px;
       font-family: 'DM sans';
       border-radius: 10px;
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
 
       .info-item {
 
@@ -141,7 +149,7 @@ $ashen: rgb(226, 225, 225);
 
           p:nth-of-type(1) {
 
-            flex: 30%;
+            flex: 50%;
 
           }
 
@@ -149,7 +157,7 @@ $ashen: rgb(226, 225, 225);
 
             color: rgb(77, 77, 77);
             max-width: 400px;
-            flex: 10%;
+            flex: 50%;
 
           }
 
@@ -308,12 +316,14 @@ $ashen: rgb(226, 225, 225);
         .hello {
 
           font-size: 4rem;
+          letter-spacing: 6px;
 
         }
 
         .intro { 
 
           width: 350px;
+          letter-spacing: 1px;
 
         }
 
@@ -343,6 +353,7 @@ $ashen: rgb(226, 225, 225);
 
             max-width: 350px;
             font-size: 1.1rem;
+            letter-spacing: 1px;
 
           }
 
