--- a/src/Styles/Projectspage.css
+++ b/src/Styles/Projectspage.css
@@ -14,11 +14,27 @@
   margin: 100px 0 100px 0;
 }
 
-.projects-page .heading p:nth-of-type(1) {
+.projects-page .heading > p:first-child {
   font-size: 2.5rem;
   font-weight: 600;
   -webkit-text-decoration: underline #28b097;
           text-decoration: underline #28b097;
+}
+
+.projects-page .heading .heading-alert {
+  background-color: #fdfde2;
+  border: 1px solid #957f00;
+  font-size: 1rem;
+  border-radius: 5px;
+  color: #957f00;
+  width: 13em;
+  height: 2.9em;
+  padding: 0 1em;
+  margin: auto;
+}
+
+.projects-page .heading .heading-alert i {
+  margin-right: 0.5em;
 }
 
 .projects-page .projects {
@@ -61,6 +77,14 @@
   }
   .projects-page .heading p:nth-of-type(1) {
     font-size: 1.5rem;
+  }
+  .projects-page .heading .heading-alert {
+    width: 10em;
+    height: 2em;
+    padding: 0 1em;
+  }
+  .projects-page .heading .heading-alert p {
+    font-size: 0.7rem;
   }
   .projects-page .projects {
     display: -ms-grid;
