--- a/src/Styles/Projectspage.scss
+++ b/src/Styles/Projectspage.scss
@@ -9,18 +9,37 @@ $accent-green: #28b097;
   .heading {
 
     font-family: SlateBold;
-    // color: white;
     color: black;
     font-size: 1.5rem;
     user-select: none;
     margin: 100px 0 100px 0;
 
-    p:nth-of-type(1) {
+    > p:first-child {
       
-    font-size: 2.5rem;
-    font-weight: 600;
-    text-decoration: underline $accent-green;
+      font-size: 2.5rem;
+      font-weight: 600;
+      text-decoration: underline $accent-green;
 
+    }
+
+    .heading-alert {
+
+      background-color: rgb(253, 253, 226);
+      border: 1px solid rgb(149, 127, 0);
+      font-size: 1rem;
+      border-radius: 5px;
+      color: rgb(149, 127, 0);
+      width: 13em;
+      height: 2.9em;
+      padding: 0 1em;
+      margin: auto; 
+      
+      i {
+
+       margin-right: 0.5em; 
+
+      }
+      
     }
 
   }
@@ -93,9 +112,20 @@ $accent-green: #28b097;
 
       }
 
-      p:nth-of-type(2), i {
+      .heading-alert {
 
-  
+
+        
+        width: 10em;
+        height: 2em;
+        padding: 0 1em;
+
+        p {
+
+          font-size: 0.7rem;
+
+        }
+
       }
 
     }
