--- a/src/Styles/Homepage.scss
+++ b/src/Styles/Homepage.scss
@@ -45,7 +45,7 @@ $ashen: rgb(226, 225, 225);
       
       .hello, .intro {
 
-        letter-spacing: 1.5px;
+        letter-spacing: 1.2px;
 
       }
 
@@ -62,7 +62,7 @@ $ashen: rgb(226, 225, 225);
 
         font-size: 1.8rem;
         font-family: Slate;
-        letter-spacing: 2px;
+        letter-spacing: 1.5px;
 
       }
 
@@ -86,6 +86,8 @@ $ashen: rgb(226, 225, 225);
     .aboutme {
 
       background-color: rgb(244, 244, 244);
+      width: 60em;
+      margin: auto;
       border: 1px solid transparent;
       border-radius: 10px;
       box-shadow: 0px 0px 20px 0px rgba(48, 168, 132, 0.75);
@@ -98,6 +100,7 @@ $ashen: rgb(226, 225, 225);
 
         font-family: SlateBold;
         text-decoration: underline $accent-green;
+        letter-spacing: 1.5px;
 
       }
 
@@ -122,7 +125,8 @@ $ashen: rgb(226, 225, 225);
       text-decoration: underline $accent-green;
       font-family: SlateBold;
       color: black;
-      ;
+      letter-spacing: 10px;
+      
       
     }
     
@@ -130,6 +134,8 @@ $ashen: rgb(226, 225, 225);
     .personal-info-section {
 
       background-color: rgb(244, 244, 244);
+      width: 50em;
+      margin: auto;
       padding: 50px;
       font-family: 'DM sans';
       border-radius: 10px;
@@ -242,6 +248,8 @@ $ashen: rgb(226, 225, 225);
 
         padding: 10px 60px;
         line-height: 1.6;
+        width: 30em;
+        margin: auto;
   
       p {
 
@@ -262,6 +270,9 @@ $ashen: rgb(226, 225, 225);
       } 
    
       .personal-info-section {
+
+        width: 30em;
+        margin: auto;
 
         .info-item {
 
@@ -370,10 +381,13 @@ $ashen: rgb(226, 225, 225);
 
         padding: 10px 30px;
         line-height: 1.6;
+        width: 18em;
+        margin: auto;
 
           h1 { 
 
-            font-size: 1.5rem;
+            font-size: 1.3rem;
+            letter-spacing: 1px;
 
           }
   
@@ -399,6 +413,8 @@ $ashen: rgb(226, 225, 225);
           .personal-info-section {
 
             padding: 10px;
+            width: 20em;
+            margin: auto;
 
 
             .info-item {
