--- a/src/Styles/Projectspage.css
+++ b/src/Styles/Projectspage.css
@@ -4,7 +4,6 @@
 }
 
 .projects-page .heading {
-  font-family: SlateBold;
   color: black;
   font-size: 1.5rem;
   -webkit-user-select: none;
@@ -15,6 +14,7 @@
 }
 
 .projects-page .heading > p:first-child {
+  font-family: SlateBold;
   font-size: 2.5rem;
   font-weight: 600;
   -webkit-text-decoration: underline #28b097;
@@ -25,11 +25,13 @@
   background-color: #fdfde2;
   border: 1px solid #957f00;
   font-size: 1rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   border-radius: 5px;
   color: #957f00;
   width: 13em;
   height: 2.9em;
   padding: 0 1em;
+  padding-bottom: 0.5em;
   margin: auto;
 }
 
@@ -82,6 +84,7 @@
     width: 10em;
     height: 2em;
     padding: 0 1em;
+    padding-bottom: 0.4em;
   }
   .projects-page .heading .heading-alert p {
     font-size: 0.7rem;
