--- a/src/Styles/Projectspage.scss
+++ b/src/Styles/Projectspage.scss
@@ -8,14 +8,14 @@ $accent-green: #28b097;
 
   .heading {
 
-    font-family: SlateBold;
     color: black;
     font-size: 1.5rem;
     user-select: none;
     margin: 100px 0 100px 0;
-
+    
     > p:first-child {
       
+      font-family: SlateBold;
       font-size: 2.5rem;
       font-weight: 600;
       text-decoration: underline $accent-green;
@@ -27,11 +27,13 @@ $accent-green: #28b097;
       background-color: rgb(253, 253, 226);
       border: 1px solid rgb(149, 127, 0);
       font-size: 1rem;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       border-radius: 5px;
       color: rgb(149, 127, 0);
       width: 13em;
       height: 2.9em;
       padding: 0 1em;
+      padding-bottom: 0.5em;
       margin: auto; 
       
       i {
@@ -119,6 +121,7 @@ $accent-green: #28b097;
         width: 10em;
         height: 2em;
         padding: 0 1em;
+        padding-bottom: 0.4em;
 
         p {
 
