--- a/src/Styles/Procard.css
+++ b/src/Styles/Procard.css
@@ -33,7 +33,7 @@
   font-size: 2rem;
   font-family: 'Open sans', sans-serif;
   font-weight: 800;
-  color: black;
+  color: #32373C; 
   padding: 50px;
   cursor: pointer;
 }
@@ -45,7 +45,7 @@
   -ms-grid-column-span: 2;
   grid-area: 5 / 1 / 5 / 3;
   background-color: #28b097;
-  color: black;
+  color: #32373C;
   text-align: center;
   padding: 15px 0;
   text-decoration: none;
@@ -61,7 +61,7 @@
 }
 
 .pro-card .code-btn:hover {
-  background-color: #1C2027;
+  background-color: #32373C;
   color: white;
   padding: 15px 0;
 }
