--- a/src/Styles/Projectspage.css
+++ b/src/Styles/Projectspage.css
@@ -4,7 +4,7 @@
 }
 
 .projects-page .heading {
-  color: black;
+  color: #32373C;
   font-size: 1.5rem;
   -webkit-user-select: none;
      -moz-user-select: none;
