--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -13,7 +13,7 @@
     font-family: 'Open sans';
     font-size: 1.8rem;
     letter-spacing: 1px;
-    color: black;
+    color: #32373C;
     margin-bottom: 4em;
     
 }
@@ -26,7 +26,7 @@
 
 .contactdiv a {
 
-    color: black;
+    color: #32373C;
     text-decoration: none;
 
 }
