--- a/src/Styles/Homepage.css
+++ b/src/Styles/Homepage.css
@@ -24,14 +24,14 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   line-height: 1.6;
-  color: black;
+  color: #32373C;
 }
 
 .homepage .section-one .about {
   font-size: 2.5rem;
   min-width: 400px;
   margin: 20px 50px 0 20px;
-  font-family: SlateBold;
+  font-family: InterExtraBold;
   text-align: left;
 }
 
@@ -42,7 +42,7 @@
 
 .homepage .section-one .about .sideline {
   border-left: 10px solid #28b097;
-  height: 800px;
+  height: 700px;
   margin-right: 40px;
   float: left;
 }
@@ -55,12 +55,13 @@
   margin-top: 10px;
   min-width: 700px;
   text-align: justify;
+  color: #32373C;
 }
 
 .homepage .section-one .extra p {
-  font-size: 1.8rem;
-  font-family: Slate;
-  letter-spacing: 1.5px;
+  font-size: 1.5rem;
+  font-family: InterReg;
+  letter-spacing: 1px;
 }
 
 .homepage .section-two {
@@ -86,6 +87,7 @@
   line-height: 1.6;
   text-align: justify;
   text-justify: inter-word;
+  color: #32373C;
 }
 
 .homepage .section-two .aboutme h1 {
@@ -111,7 +113,7 @@
   -webkit-text-decoration: underline #28b097;
           text-decoration: underline #28b097;
   font-family: SlateBold;
-  color: black;
+  color: #32373C;
   letter-spacing: 10px;
 }
 
@@ -193,7 +195,7 @@
     font-size: 4rem;
   }
   .homepage .section-one .about .sideline {
-    height: 800px;
+    height: 700px;
   }
   .homepage .extra p {
     width: 600px;
