--- a/src/Styles/Projectspage.scss
+++ b/src/Styles/Projectspage.scss
@@ -8,7 +8,7 @@ $accent-green: #28b097;
 
   .heading {
 
-    color: black;
+    color: #32373C;
     font-size: 1.5rem;
     user-select: none;
     margin: 100px 0 100px 0;
